<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customPasswordPinEditText_new_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_cancel_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/password_reset_dialog_button_cancel" />

        <Button
            android:id="@+id/button_save_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/password_reset_dialog_button_save" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_password_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/password_reset_dialog_enter_password_hint" />

    <com.example.movietracker.view.custom_view.CustomPasswordPinEditText
        android:id="@+id/customPasswordPinEditText_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_password_hint"
        android:layout_marginTop="18dp"
        app:should_request_focus = "true"/>

</RelativeLayout>