<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView_old_password_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/password_reset_dialog_old_password_hint" />

    <com.example.movietracker.view.custom_view.CustomPasswordPinEditText
        android:id="@+id/customPasswordPinEditText_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_old_password_hint"
        android:layout_marginTop="8dp"
        app:should_request_focus = "true"/>

    <TextView
        android:id="@+id/textView_new_password_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/customPasswordPinEditText_old_password"
        android:text="@string/password_reset_dialog_new_password_hint" />

    <com.example.movietracker.view.custom_view.CustomPasswordPinEditText
        android:id="@+id/customPasswordPinEditText_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_new_password_hint"
        android:layout_marginTop="8dp"
        app:should_request_focus = "false"/>

    <Button
        android:id="@+id/button_save_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customPasswordPinEditText_new_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/password_reset_dialog_button_save" />
</RelativeLayout>