<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout_add_score"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/filter_alert_dialog_color">

    <RelativeLayout
        android:id="@+id/rl_container"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/textView5"
            android:layout_below="@+id/textView4"
            android:layout_toEndOf="@+id/radioButtonsGroup"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="false">


            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:track="@drawable/switch_track_drawable"
                android:thumb="@drawable/switch_thumb_drawable"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:rotation="90"/>
        </RelativeLayout>

        <RadioGroup
            android:id="@+id/radioButtonsGroup"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="0dp"
            android:paddingLeft="18dp"
            android:paddingTop="18dp"
            android:paddingRight="18dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/radioButtonsGroup"
            android:text="@string/alert_dialog_desc"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/radioButtonsGroup"
            android:text="@string/alert_dialog_asc"
            android:textAlignment="center" />

    </RelativeLayout>


    <Button
        android:id="@+id/button_save_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_container"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/alert_dialog_done_button_text"
        android:background="@color/filter_alert_dialog_done_button_color"/>
</RelativeLayout>